--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
         <title>Django Girls blog</title>
     </head>
     <body>
-        <div> //adds new line after text 
+        <div> <!-- adds new line after text -->
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
 
